mdapi/Custom/objects/Claim_Update__c.object
<CustomObject>
    <description>This is part of the Legal deployment. This tracks ongoing changes, updates, and notes relating to legal claims.</description>
    <fields>
        <fullName>Claim__c</fullName>
        <label>Claim</label>
        <referenceTo>Claims__c</referenceTo>
        <relationshipName>Claim_Statuses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Update_Type__c</fullName>
        <label>Update Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication with Outside Counsel</fullName>
                </value>
                <value>
                    <fullName>Correspondence with Opposing Party</fullName>
                </value>
                <value>
                    <fullName>Counsel Engaged</fullName>
                </value>
                <value>
                    <fullName>Hearing Result</fullName>
                </value>
                <value>
                    <fullName>In-House Counsel Note</fullName>
                </value>
                <value>
                    <fullName>Monthly Status Update Within 4 Days of EOM</fullName>
                </value>
                <value>
                    <fullName>Motion/Answer Filed</fullName>
                </value>
                <value>
                    <fullName>Update from Region Head</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Claim Update</label>
    <nameField>
        <displayFormat>Update-{000000}</displayFormat>
        <label>Update #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>